# W_Engineering_Team

./: README.md  pyproject.toml
src/w_engineering_team/: crew.py  main.py
src/w_engineering_team/config/: agents.yaml  tasks.yaml
src/w_engineering_team/tools/: custom_tool.py
