[project]
name = "w_engineering_team"
version = "0.1.0"
description = "W_Engineering_Team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
w_engineering_team = "w_engineering_team.main:run"
run_crew = "w_engineering_team.main:run"
train = "w_engineering_team.main:train"
replay = "w_engineering_team.main:replay"
test = "w_engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
